k8s/gateway/load-balancer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      name: traefik
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-controller
      containers:
        - name: traefik
          image: traefik:3.7
          imagePullPolicy: IfNotPresent
          args:
            - --providers.kubernetesgateway
            - --entrypoints.web.address=:80
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  selector:
    app: traefik
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
