k8s/gateway/http-routes.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: identity-route
  namespace: default
spec:
  parentRefs:
    - name: carsties-gateway
      sectionName: http
      kind: Gateway

  hostnames:
    - id.carsties.test

  rules:
    - backendRefs:
        - name: identity-svc
          namespace: default
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-route
  namespace: default
spec:
  parentRefs:
    - name: carsties-gateway
      sectionName: http
      kind: Gateway

  hostnames:
    - api.carsties.test

  rules:
    - backendRefs:
        - name: gateway-svc
          namespace: default
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-route
  namespace: default
spec:
  parentRefs:
    - name: carsties-gateway
      sectionName: http
      kind: Gateway

  hostnames:
    - app.carsties.test

  rules:
    - backendRefs:
        - name: web-app
          namespace: default
          port: 3000
